* NEXT VERSION *

* New generic pcm decoder handles 8/12/16/24/32 bit WAVs,
  AIFF (all bit depths), Quicktime (raw, twos and sowt) and
  DVD audio (LPCM).

* WAVEFORMATEXTENSIBLE support in wav files

* Raw AVIs with 8, 16, 24 and 32 bpp